# minibook

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .rhiza.env  CHANGELOG.md  CLAUDE.md  Makefile  README.md  REPOSITORY_ANALYSIS.md  pyproject.toml  pytest.ini  renovate.json  ruff.toml
.claude/: analysis.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/actions/book/: action.yml
.github/actions/minibook/: README.md  action.yml  test.sh
.github/taskfiles/: docs.yml
.github/workflows/: book.yml  ci.yml  codeql.yml  minibook.yml  pre-commit.yml  release.yml  renovate_rhiza_sync.yml  rhiza_benchmark.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_deptry.yml  rhiza_marimo.yml  rhiza_release.yml  rhiza_security.yml  security.yml
.gitlab/: COMPARISON.md  README.md  SUMMARY.md  TESTING.md
.gitlab/template/: marimo_job_template.yml.jinja
.gitlab/workflows/: rhiza_book.yml  rhiza_ci.yml  rhiza_deptry.yml  rhiza_pre-commit.yml  rhiza_release.yml  rhiza_renovate.yml  rhiza_sync.yml  rhiza_validate.yml
.rhiza/: history  template-bundles.yml  template.yml
.rhiza/requirements/: tools.txt
.rhiza/tests/: conftest.py
.rhiza/tests/api/: conftest.py
.rhiza/tests/sync/: conftest.py
book/: _config.yml
book/docs/: api.md  index.md  marimo.md  reports.md
docs/: PLUGIN_DEVELOPMENT.md  TEMPLATE_VARIABLES.md
docs/adr/: 001-plugin-architecture.md  002-security-csp-autoescape.md  003-url-validation.md  README.md
src/minibook/: __init__.py  exceptions.py  main.py  plugins.py  utils.py
src/minibook/templates/: bare.j2  html.j2
src/tests/: __init__.py  conftest.py  generation.py  test_action_script.py  test_custom_template.py  test_invalid_format.py  test_json_like_parsing.py  test_json_list_format.py  test_json_parsing_error.py  test_main.py  test_main_entry_point.py  test_minibook.py  test_mkdocs_html_output.py  test_template_not_found.py  test_tuples.py  test_validate_links_cli.py  test_validate_url.py
src/tests/resources/: custom_template.j2  test.sh  test_output.html
src/tests/resources/test_mkdocs_site/: mkdocs.yml
src/tests/resources/test_mkdocs_site/docs/: index.md
tests/: test_autoescape.py  test_csp.py  test_e2e_formats.py  test_error_handling.py  test_exceptions.py  test_import_coverage.py  test_input_validation.py  test_json_like_parsing.py  test_json_list_format.py  test_json_parsing_error.py  test_main.py  test_minibook.py  test_no_links_cli.py  test_parse_links.py  test_plugin_import_errors.py  test_plugins.py  test_property_based.py  test_security_edge_cases.py  test_url_edge_cases.py  test_validate_links_cli.py  test_validate_url.py  tests.mk
tests/benchmarks/: __init__.py  conftest.py  test_plugin_benchmarks.py
