[project]
name = 'minibook'
version = "1.0.0"
description = "Minibook for reporting"
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "typer>=0.16.0",
    "requests>=2.31.0"
]

[dependency-groups]
dev = [
    "marimo>=0.18",
    "numpy>=2.4",
    "plotly>=6.5",
    "pandas>=2.3",
]


[project.urls]
repository = "https://github.com/tschm/minibook"

[project.scripts]
minibook = "minibook.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minibook"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/minibook"
]
