[project]
name = 'minibook'
version = "1.2.0"
description = "A simple tool for creating beautiful minibooks from a list of links"
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "html",
    "generator",
    "minibook",
    "documentation",
    "links",
    "jinja2",
    "static-site",
    "reporting",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1.6",
    "typer>=0.16.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
pdf = ["fpdf2>=2.8.5"]
epub = ["ebooklib>=0.18"]
all = ["fpdf2>=2.8.5", "ebooklib>=0.18"]

[dependency-groups]
dev = [
    "marimo>=0.18",
    "numpy>=2.4",
    "plotly>=6.5",
    "pandas>=2.3",
    "hypothesis>=6.150.2",
    "fpdf2>=2.8.5",
    "ebooklib>=0.18",
    "pytest-watch>=4.2.0",
]

[tool.deptry.package_module_name_map]
fpdf2 = "fpdf"
ebooklib = "ebooklib"


[project.urls]
Homepage = "https://tschm.github.io/minibook/"
Documentation = "https://tschm.github.io/minibook/"
Repository = "https://github.com/tschm/minibook"
"Source Code" = "https://github.com/tschm/minibook"
"Bug Tracker" = "https://github.com/tschm/minibook/issues"
Discussions = "https://github.com/tschm/minibook/discussions"
Changelog = "https://github.com/tschm/minibook/releases"

[project.scripts]
minibook = "minibook.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minibook"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/minibook"
]
